--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
     "laravel/framework": "^8.40",
     "laravel/tinker": "^2.5",
     "laravel/ui": "^3.4",
-    "spatie/laravel-permission": "^5.5"
+    "spatie/laravel-permission": "^5.5",
+    "yajra/laravel-datatables": "1.5",
+    "yajra/laravel-datatables-oracle": "~9.0"
   },
   "require-dev": {
     "facade/ignition": "^2.5",
