--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "laravel/framework": "^8.40",
     "laravel/tinker": "^2.5",
     "laravel/ui": "^3.4",
+    "spatie/laravel-medialibrary": "*",
     "spatie/laravel-permission": "^5.5",
     "yajra/laravel-datatables": "1.5",
     "yajra/laravel-datatables-oracle": "~9.0"
